# mousefree

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: font.rs  input.rs  main.rs  render.rs  wayland.rs
